# cookiecutter-cpp

{{cookiecutter.project_name}}/: CMakeLists.txt  README.md
{{cookiecutter.project_name}}/src/: CMakeLists.txt  {{cookiecutter.project_name}}.cpp
{{cookiecutter.project_name}}/test/: CMakeLists.txt  test_{{cookiecutter.project_name}}.cpp
